ncc/testsuite/positive/Issue-1028.n
using System;
using System.Console;

public interface IA
{
}

public abstract class B
{
}

public class C : B, IA
{
}

public module Program {

  public F[T](_ : T) : void where T : B, IA
  {
    WriteLine("Generic");
  }

  public F(_ : B) : void
  {
    WriteLine("NonGeneric");
  }

  Main() : void {
    F(C());
  }
}
/*
BEGIN-OUTPUT
Generic
END-OUTPUT
*/
