ncc/testsuite/negative/where-constraints5.n
using M;

class X 
{
  private this () { }
  public this (_ : int) { }
}

class Q { }

module M 
{
  public FunStruct[T] (_ : T) : void where T : struct { }
  public FunClass [T] (_ : T) : void where T : class  { }
  public FunNew   [T] (_ : T) : void where T : new () { }
}

FunStruct (3); // OK
FunStruct ("foo"); // E: must be a value type
FunClass (3);  // E: must be a reference type
FunClass ("foo"); // OK

FunNew (3); // OK
FunNew ("foo"); // E: must have a public parameterless constructor
FunNew (X (3)); // E: must have a public parameterless constructor
FunNew (System.Collections.Generic.List.[int] ()); // OK
FunNew (Q ()); // OK
